--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,10 +12,12 @@
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
+		"cryptotradingx": "file:..",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.1",
 		"mysql2": "^3.3.2",
+		"stripe": "^19.1.0",
 		"uuid": "^9.0.0",
 		"ws": "^8.13.0"
 	},
