--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.1",
 		"mysql2": "^3.3.2",
+		"nodemailer": "^7.0.9",
 		"stripe": "^19.1.0",
 		"uuid": "^9.0.0",
 		"ws": "^8.13.0"
