Moved over to https from http

--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "cryptotradingx",
   "private": true,
   "scripts": {
-    "api": "npm start --prefix Backend",
-    "api:dev": "npm run dev --prefix Backend",
-    "web": "http-server Frontend -p 8080 -c-1",
-    "dev": "concurrently -k -n API,WEB -c green,cyan \"npm:api:dev\" \"npm:web\""
-  },
+  "api": "npm start --prefix Backend",
+  "api:dev": "npm run dev --prefix Backend",
+  "web:https": "http-server Frontend -S -C Backend/certs/localhost.pem -K Backend/certs/localhost-key.pem -p 8443 -c-1",
+  "web": "http-server Frontend -p 8080 -c-1",
+  "dev:https": "concurrently -k -n API,WEB -c green,cyan \"npm:api:dev\" \"npm:web:https\""
+},
   "devDependencies": {
     "concurrently": "^9.2.1",
     "http-server": "^14.1.1"
