--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,18 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# certs/keys
+Backend/certs/**
+*.pem
+*.key
+*.crt
+*.pfx
+*.p12
+
+# node
+node_modules/
+npm-debug.log*
+
 # Env files (keep example)
 .env
 .env.*
