--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,13 +14,16 @@
 		"cors": "^2.8.5",
 		"cryptotradingx": "file:..",
 		"dotenv": "^16.3.1",
-		"express": "^4.18.2",
-		"jsonwebtoken": "^9.0.1",
+		"ethers": "^6.15.0",
+		"express": "^4.21.2",
+		"jsonwebtoken": "^9.0.2",
 		"mysql2": "^3.3.2",
 		"nodemailer": "^7.0.9",
+		"openai": "^6.3.0",
+		"redis": "^5.8.3",
 		"stripe": "^19.1.0",
 		"uuid": "^9.0.0",
-		"ws": "^8.13.0"
+		"ws": "^8.18.3"
 	},
 	"devDependencies": {
 		"nodemon": "^3.0.1"
